--- a/themes/hamburg/layouts/index.html
+++ b/themes/hamburg/layouts/index.html
@@ -1,13 +1,19 @@
 {{ partial "header.html" . }}
-<div class="article-list">
-  {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-  {{ range $index, $page := $paginator.Pages }}
-    {{ if ne $index 0 }}
-      <div class="delimiter"></div>
-    {{ end }}
-    {{ .Render "li" }}
-  {{ end }}
+
+<div class="homepage-content">
+  <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
+  {{.Content}}
 </div>
+
+<!--<div class="article-list">-->
+<!--  {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}-->
+<!--  {{ range $index, $page := $paginator.Pages }}-->
+<!--    {{ if ne $index 0 }}-->
+<!--      <div class="delimiter"></div>-->
+<!--    {{ end }}-->
+<!--    {{ .Render "li" }}-->
+<!--  {{ end }}-->
+<!--</div>-->
 {{ if (not (eq nil .Paginator)) }}
   {{ partial "pagination.html" .Paginator }}
 {{ end }}
