--- a/themes/hamburg/layouts/partials/header.html
+++ b/themes/hamburg/layouts/partials/header.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/color-theme.css" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" type="text/css">
   <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" />
-  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/apple-touch-icon.png" />
+<!--  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/apple-touch-icon.png" />-->
 
   {{ range .Site.Params.customCSS }}
     <link rel="stylesheet" href="{{ (print "css/" . ) | absURL }}">
@@ -52,7 +52,7 @@
   {{ if isset .Params "image" }}
   <header class="global-header"  style="background-image:url({{ .Params.image }})">
   {{ else }}
-  <header class="global-header"  style="background-image:url({{ "images/monster-render-2.jpg" | absURL }})">
+  <header class="global-header"  style="background-image:url({{ "images/monster-render-3.jpg" | absURL }})">
   {{ end }}
     <section class="header-text">
       <h1><a href="{{ "" | absLangURL }}">{{ .Site.Title }}</a></h1>
