Until day 5, Dutch and English

--- a/themes/hamburg/layouts/partials/header.html
+++ b/themes/hamburg/layouts/partials/header.html
@@ -52,7 +52,7 @@
   {{ if isset .Params "image" }}
   <header class="global-header"  style="background-image:url({{ .Params.image }})">
   {{ else }}
-  <header class="global-header"  style="background-image:url({{ "images/monster-render-3.jpg" | absURL }})">
+  <header class="global-header"  style="background-image:url({{ "images/noordkaap-header-2.jpg" | absURL }})">
   {{ end }}
     <section class="header-text">
       <h1><a href="{{ "" | absLangURL }}">{{ .Site.Title }}</a></h1>
