--- a/themes/hamburg/static/css/main.css
+++ b/themes/hamburg/static/css/main.css
@@ -8,6 +8,7 @@ main {
 .global-header {
     background-size: cover;
     background-position-x: center;
+    background-position-y: bottom;
     min-height: 350px;
 }
 
